asset can now swap and accept usdc at token0

--- a/planning.ipynb
+++ b/planning.ipynb
@@ -178,6 +178,18 @@
     "print(f\"Average Excess Return: {avg_excess_return}\")\n",
     "print(f\"Standard Deviation of Excess Return: {std_excess_return}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#usdc/weth notepad\n",
+    "\n",
+    "tickCumulatives = [19200193677078,19200193870967]\n",
+    "diff = tickCumulatives[1] - tickCumulatives[0]\n"
+   ]
   }
  ],
  "metadata": {
